# segmentation

./: LICENSE  README.md  _config.yml  index.md
0_Groundtruth_PointXYZL/: room1_gt_fine.pcd
1_Input_pointcloud_with_label_0_PointXYZL/: HMW_ROOM2_7.5cm7.5cm_ORG_COORD_input_cloud_with_label.pcd
_layouts/: page.html
css/: main.css
data/0_Groundtruth_PointXYZL/: room2_gt_coarse.pcd  room2_gt_fine.pcd
evaluation_code/: CMakeLists.txt  Readme  evaluate_multiscale.cpp  evaluation_computer.cpp  evaluation_computer.h
